Fixed Spacing of Go Home Button

--- a/app/assets/stylesheets/admins.css
+++ b/app/assets/stylesheets/admins.css
@@ -324,7 +324,7 @@
 .admin_go_home {
 	float:left;
 	padding:20px 100px 20px 100px;
-	margin:30px 0px 0px 350px;
+	margin:30px 0px 50px 350px;
 	border:1px solid #D0D0D0;
 	background-color:White;
 	font-family:"Helvetica";
